[gd_scene load_steps=4 format=3 uid="uid://beguxi257sn36"]

[ext_resource type="Script" path="res://Scripts/new_game.gd" id="1_fpedv"]
[ext_resource type="Texture2D" uid="uid://d1glehckah7dp" path="res://Assets/pia21590_orig.jpg" id="1_gvxec"]

[sub_resource type="LabelSettings" id="LabelSettings_8lwr8"]
line_spacing = 0.0
font_size = 10

[node name="new_game" type="Node2D"]
script = ExtResource("1_fpedv")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1200.0
offset_bottom = 675.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_gvxec")
expand_mode = 5
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 525.0
offset_top = 240.0
offset_right = 675.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="company" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "COMPANY"
label_settings = SubResource("LabelSettings_8lwr8")
vertical_alignment = 2

[node name="player_name" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Name"

[node name="difficulty" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "DIFFICULTY"
label_settings = SubResource("LabelSettings_8lwr8")
vertical_alignment = 2

[node name="game_difficulty" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Standard"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2

[node name="HSplitContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="back" type="Button" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
text = "BACK"

[node name="start_game" type="Button" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
text = "BEGIN"

[connection signal="pressed" from="VBoxContainer/HSplitContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/start_game" to="." method="_on_start_game_pressed"]
